<resources>
    <string name="app_name">reglogin</string>
    <string name="login_in_with_google">login_in_with_google</string>
    <string name="logout">logout</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="loginn">Login</string>
    <string name="signup">signup?</string>
    <string name="signupp">signup</string>
    <string name="loginnn">login?</string>
    <string name="hello">HELLO</string>
</resources>
