<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:accessibilityHeading="true"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity"
    tools:targetApi="p">


    <Button
        android:id="@+id/login_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="107dp"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_google_logo"
        android:includeFontPadding="false"
        android:text="@string/login_in_with_google"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="107dp"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_google_logo"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="114dp"
        android:layout_height="79dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_world"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="36dp"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/progress_circular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progress_circular"
        style="?android:attr/progressBarStyle"
        android:layout_width="26dp"
        android:layout_height="15dp"
        android:layout_marginTop="36dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/pass_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_circular"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/pass_login"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="255dp"
        android:onClick="fotgot"
        android:layout_marginBottom="15dp"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="84dp"
        android:layout_height="58dp"
        android:layout_marginStart="146dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="86dp"
        android:text="@string/loginn"
        android:onClick="logintoapp"
        app:layout_constraintBottom_toTopOf="@+id/login_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot" />

    <TextView
        android:id="@+id/signupplz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="36dp"
        android:onClick="signup"
        android:text="@string/signup"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>