<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:accessibilityHeading="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity"
    tools:targetApi="p">


    <EditText
        android:id="@+id/email_signup"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="108dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/pass_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/pass_signup"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="108dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_signup"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="84dp"
        android:layout_height="58dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="124dp"
        android:text="@string/signupp"
        app:layout_constraintBottom_toTopOf="@+id/login_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_signup"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/login_reg"
        android:layout_width="38dp"
        android:layout_height="0dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="203dp"
        android:text="@string/loginnn"
        android:onClick="login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>